Compiler/tests/bad/function6.nx
function somar(x : int, y : int) : int
{
    return 3;
}

int somar : int = 3;